// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPageBlocks AudioPlayer should render correctly for amp 1`] = `
.c2 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 50rem;
  max-width: calc(100vw - 2rem);
  position: relative;
  overflow: hidden;
  height: 165px;
}

@media (min-width:63rem) {
  .c2 {
    margin-bottom: 2rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <amp-iframe
              allowfullscreen="allowfullscreen"
              frameborder="0"
              layout="fill"
              sandbox="allow-scripts allow-same-origin"
              scrolling="no"
              src="https://polling.test.bbc.co.uk/ws/av-embeds/media/korean/externalId/id/ko/amp"
              title="Audio player"
            >
              <amp-img
                alt=""
                attribution=""
                height="16"
                layout="fill"
                placeholder="true"
                src="http://localhost:7080/images/amp_audio_placeholder.png"
                width="9"
              />
              <noscript />
            </amp-iframe>
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPageBlocks AudioPlayer should render correctly for canonical 1`] = `
.c2 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 50rem;
  max-width: calc(100vw - 2rem);
  position: relative;
  overflow: hidden;
  height: 165px;
}

.c3 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c2 {
    margin-bottom: 2rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <iframe
        allow="autoplay; fullscreen"
        allowfullscreen=""
        class="c3"
        scrolling="no"
        src="https://polling.test.bbc.co.uk/ws/av-embeds/media/korean/externalId/id/ko"
        title="Audio player"
      />
      <noscript />
    </div>
  </div>
</div>
`;

exports[`MediaPageBlocks AudioPlayer when externalId is bbc_oromo_radio it is overriden to bbc_afaanoromoo_radio should render correctly for amp 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c2 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 50rem;
  max-width: calc(100vw - 2rem);
  position: relative;
  overflow: hidden;
  height: 165px;
}

@media (min-width:63rem) {
  .c2 {
    margin-bottom: 2rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <amp-iframe
              allowfullscreen="allowfullscreen"
              frameborder="0"
              layout="fill"
              sandbox="allow-scripts allow-same-origin"
              scrolling="no"
              src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om/amp"
              title="Audio player"
            >
              <amp-img
                alt=""
                attribution=""
                height="16"
                layout="fill"
                placeholder="true"
                src="http://localhost:7080/images/amp_audio_placeholder.png"
                width="9"
              />
              <noscript />
            </amp-iframe>
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPageBlocks AudioPlayer when externalId is bbc_oromo_radio it is overriden to bbc_afaanoromoo_radio should render correctly for canonical 1`] = `
.c2 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 50rem;
  max-width: calc(100vw - 2rem);
  position: relative;
  overflow: hidden;
  height: 165px;
}

.c3 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c2 {
    margin-bottom: 2rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <iframe
        allow="autoplay; fullscreen"
        allowfullscreen=""
        class="c3"
        scrolling="no"
        src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/id/om"
        title="Audio player"
      />
      <noscript />
    </div>
  </div>
</div>
`;
